--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "philippines": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
