--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://fayeMercado.github.io/p2p-rental-platform-project",
   "name": "p2p-rental-platform",
   "version": "0.1.0",
   "private": true,
